@@ -198,6 +198,9 @@ CHANGES
   - Composite PK table on InnoDB where the "autoincrement" column
     isn't first will emit an explicit "KEY" phrase within 
     CREATE TABLE thereby avoiding errors, [ticket:1496]
+
+  - Added reflection/create table support for a wide range
+    of MySQL keywords.  [ticket:1634]
     
 - mssql
   - Re-established initial support for pymssql.
